tests/specs/ecosystem/skmtc/rtk_query/0_0_3.test
skmtc/rtk-query/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@skmtc/skmtc@0.0.4": "jsr:@skmtc/skmtc@0.0.4",
      "jsr:@std/assert@^0.224.0": "jsr:@std/assert@0.224.0",
      "jsr:@std/path@0.224.0": "jsr:@std/path@0.224.0",
      "npm:@babel/helper-validator-identifier@7.22.20": "npm:@babel/helper-validator-identifier@7.22.20",
      "npm:lodash-es@4.17.21": "npm:lodash-es@4.17.21",
      "npm:openapi-types@12.1.3": "npm:openapi-types@12.1.3",
      "npm:prettier@3.2.5": "npm:prettier@3.2.5",
      "npm:tiny-invariant@1.3.3": "npm:tiny-invariant@1.3.3",
      "npm:ts-pattern@5.1.1": "npm:ts-pattern@5.1.1",
      "npm:zod@3.23.4": "npm:zod@3.23.4"
    },
    "jsr": {
      "@skmtc/skmtc@0.0.4": {
        "integrity": "2976ef70174cdee5492fcf54550acccedefe94296bcb5bd34dc7ee8810c1f09b",
        "dependencies": [
          "jsr:@std/path@0.224.0",
          "npm:@babel/helper-validator-identifier@7.22.20",
          "npm:lodash-es@4.17.21",
          "npm:openapi-types@12.1.3",
          "npm:prettier@3.2.5",
          "npm:tiny-invariant@1.3.3",
          "npm:ts-pattern@5.1.1",
          "npm:zod@3.23.4"
        ]
      },
      "@std/assert@0.224.0": {
        "integrity": "8643233ec7aec38a940a8264a6e3eed9bfa44e7a71cc6b3c8874213ff401967f"
      },
      "@std/path@0.224.0": {
        "integrity": "55bca6361e5a6d158b9380e82d4981d82d338ec587de02951e2b7c3a24910ee6",
        "dependencies": [
          "jsr:@std/assert@^0.224.0"
        ]
      }
    },
    "npm": {
      "@babel/helper-validator-identifier@7.22.20": {
        "integrity": "sha512-Y4OZ+ytlatR8AI+8KZfKuL5urKp7qey08ha31L8b3BwewJAoJamTzyvxPR/5D+KkdJCGPq/+8TukHBlY10FX9A==",
        "dependencies": {}
      },
      "lodash-es@4.17.21": {
        "integrity": "sha512-mKnC+QJ9pWVzv+C4/U3rRsHapFfHvQFoFB92e52xeyGMcX6/OlIl78je1u8vePzYZSkkogMPJ2yjxxsb89cxyw==",
        "dependencies": {}
      },
      "openapi-types@12.1.3": {
        "integrity": "sha512-N4YtSYJqghVu4iek2ZUvcN/0aqH1kRDuNqzcycDxhOUpg7GdvLa2F3DgS6yBNhInhv2r/6I0Flkn7CqL8+nIcw==",
        "dependencies": {}
      },
      "prettier@3.2.5": {
        "integrity": "sha512-3/GWa9aOC0YeD7LUfvOG2NiDyhOWRvt1k+rcKhOuYnMY24iiCphgneUfJDyFXd6rZCAnuLBv6UeAULtrhT/F4A==",
        "dependencies": {}
      },
      "tiny-invariant@1.3.3": {
        "integrity": "sha512-+FbBPE1o9QAYvviau/qC5SE3caw21q3xkvWKBtja5vgqOWIHHJ3ioaq1VPfn/Szqctz2bU/oYeKd9/z5BL+PVg==",
        "dependencies": {}
      },
      "ts-pattern@5.1.1": {
        "integrity": "sha512-i+owkHr5RYdQxj8olUgRrqpiWH9x27PuWVfXwDmJ/n/CoF/SAa7WW1i2oUpPDMQpJ4U+bGRUcZkVq7i1m3zFCg==",
        "dependencies": {}
      },
      "zod@3.23.4": {
        "integrity": "sha512-/AtWOKbBgjzEYYQRNfoGKHObgfAZag6qUJX1VbHo2PRBgS+wfWagEY2mizjfyAPcGesrJOcx/wcl0L9WnVrHFw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /mod.ts:6:7
  | 
6 | const transform = ({ context, transformerSettings }: TransformerArgs) => {
  |       ^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


